using System.Collections;
using System.Collections.Generic;
using UnityEngine;

namespace ZhangWei
{
    public class Tags
    {
        public static string Player = "Player";
        public static string Enemy = "Enemy";
        public static string EnemyDamageBox = "EnemyDamageBox";

        /*����״̬��tag*/
        public static string takeDamage = "TakeDamage";
        public static string Idle = "Idle";
        public static string Attack = "Attack";
        public static string Move = "Move";
        public static string Die = "Die";
    }
}